TLINE-188 Fix plus icon on Lockbox page rendering too small on android

--- a/mobile/scss/modules/lockbox.scss
+++ b/mobile/scss/modules/lockbox.scss
@@ -6,7 +6,7 @@
   .bar-header  {
       i {
           font-size: 1.8em;
-          line-height: 1.55em;;
+          line-height: 1.55em;
       }
   }
   
@@ -99,6 +99,11 @@ and (max-device-height : 568px) {
             
             .ion, .icon {
                 font-size: 1.8em;
+            }
+            
+            .no-date .ion-plus {
+               font-size: 1.8em;
+               line-height: 1.55em;
             }
         }
         
